[gd_scene load_steps=14 format=3 uid="uid://bxtldr4wr810k"]

[ext_resource type="Script" path="res://Scenes/Enemy.gd" id="1_10356"]
[ext_resource type="Script" path="res://Scenes/HitManager.gd" id="2_1mfri"]
[ext_resource type="PackedScene" uid="uid://dl2ifh2mtykpq" path="res://Particles/HitImpact.tscn" id="3_kpvsh"]
[ext_resource type="Material" uid="uid://dwax5uwomrfi0" path="res://Shaders/HurtFlash.tres" id="4_klilr"]
[ext_resource type="Texture2D" uid="uid://c2ukhurkkq77d" path="res://Enemy/Assets/sunkorn.png" id="5_86pxd"]
[ext_resource type="Texture2D" uid="uid://dna0b5w73ci03" path="res://Enemy/Assets/dead_korn.png" id="6_hphm2"]
[ext_resource type="Script" path="res://Scenes/EnemyGUI.gd" id="7_18eif"]
[ext_resource type="Script" path="res://Scenes/DamageNumber.gd" id="8_vfhwc"]
[ext_resource type="Script" path="res://Scenes/FlashOnHit.gd" id="9_dmm08"]
[ext_resource type="Script" path="res://Enemy/Scripts/AOEHeal.gd" id="10_2t7ue"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0ihq0"]
animations = [{
"frames": [ExtResource("5_86pxd")],
"loop": true,
"name": &"alive",
"speed": 5.0
}, {
"frames": [ExtResource("6_hphm2")],
"loop": true,
"name": &"dead",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_lgit8"]
font_size = 36
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_61i3l"]
radius = 18.0
height = 78.0

[node name="Enemy" type="Node2D" groups=["enemy"]]
position = Vector2(0, 32)
script = ExtResource("1_10356")
max_hp = 15

[node name="HitManager" type="Node2D" parent="."]
script = ExtResource("2_1mfri")

[node name="ImpactEffect" parent="HitManager" instance=ExtResource("3_kpvsh")]

[node name="Sprite" type="AnimatedSprite2D" parent="."]
material = ExtResource("4_klilr")
use_parent_material = true
position = Vector2(-2, -41)
scale = Vector2(0.6, 0.6)
frames = SubResource("SpriteFrames_0ihq0")
animation = &"alive"

[node name="EnemyGUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 80.0
offset_bottom = 14.363
script = ExtResource("7_18eif")
metadata/_edit_use_anchors_ = true

[node name="DamageNumber" type="Label" parent="EnemyGUI"]
modulate = Color(1, 1, 1, 0)
offset_top = -84.0
offset_right = 40.0
offset_bottom = -58.0
text = "0"
label_settings = SubResource("LabelSettings_lgit8")
script = ExtResource("8_vfhwc")
metadata/_edit_use_anchors_ = true

[node name="Pain" type="Timer" parent="EnemyGUI"]
wait_time = 1.5

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-2, -40)
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_61i3l")

[node name="FlashOnHit" type="Node" parent="."]
script = ExtResource("9_dmm08")

[node name="Attacks" type="Node2D" parent="."]

[node name="AOEHeal" type="Node2D" parent="Attacks"]
script = ExtResource("10_2t7ue")

[node name="AttackTimer" type="Timer" parent="Attacks/AOEHeal"]
one_shot = true

[connection signal="health_changed" from="." to="HitManager" method="_on_enemy_health_changed"]
[connection signal="health_changed" from="." to="EnemyGUI" method="_on_health_changed"]
[connection signal="health_changed" from="." to="FlashOnHit" method="_on_health_changed"]
[connection signal="timeout" from="EnemyGUI/Pain" to="." method="_on_pain_timeout"]
